[metadata]
name = plover2cat
version = attr: plover_cat.__version__.__version__
description = A CAT software for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author =  plants
author_email =  greenwyrt@gmail.com
license = MIT
url = https://github.com/greenwyrt/plover2CAT/
classifiers =
        Development Status :: 4 - Beta
        Environment :: Plugins
        Intended Audience :: End Users/Desktop
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
        plover >= 5.0.0.dev2
        PySide6-Addons >= 6.9.0
        odfpy
        pyparsing > 3.0.7
        spylls
        dulwich
        obsws-python > 1.6.0
packages =
        plover_cat

[options.entry_points]
plover.gui.qt.tool =
        plover_cat = plover_cat:PloverCAT

# vim: commentstring=#\ %s list
